commit by sandip uptop lesson 6

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <title>Quiz App</title>
       <script src="scripts/vendor/angular.min.js" charset="utf-8"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <script src="scripts/app.js" charset="utf-8"></script>
+      <script src="content/data/data.js" charset="utf-8"></script>
+
+      <!-- Controllers -->
+      <script src="scripts/controllers/list.ctrl.js" charset="utf-8"></script>
 
       <link rel="stylesheet" href="style/bootstrap.min.css">
-      <link rel="stylesheet" href="style/bootstrap.min.css">
-  </head>ds
+      <link rel="stylesheet" href="style/custom.css">
+  </head>
   <body ng-app="myApp">
-       <div ng-include="'view/main.html'">
-         sas
-         a
-         sas
-         as
+       <div class="container" ng-include="'view/main.html'">
   </body>
 </html>
