stil 9 chapter done at homt

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- controller -->
       <!--  factories-->
       <script src="scripts/factories/quizmetrics.fact.js" charset="utf-8"></script>
+      <script src="scripts/factories/dataServices.fact.js" charset="utf-8"></script>
       <!--  factories-->
       <!-- Styles -->
       <link rel="stylesheet" href="style/bootstrap.min.css">
