commited at home on sanday 10/09/17

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <!-- controller -->
       <script src="scripts/controllers/list.ctrl.js" charset="utf-8"></script>
       <script src="scripts/controllers/quiz.ctrl.js" charset="utf-8"></script>
+      <script src="scripts/controllers/result.ctrl.js" charset="utf-8"></script>
       <!-- controller -->
       <!--  factories-->
       <script src="scripts/factories/quizmetrics.fact.js" charset="utf-8"></script>
